--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,9 @@
 
 <br/>
 
-Welcome to the college admin
+<div class="jumbotron">
+    <div>
+        <h2>Welcome to the College Student database</h2>
+        <p>To get started click on a tab above and start making changes.</p>
+    </div>
+</div>
