--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,12 +7,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><img alt="The Iron Yard" src="assets/images/tiy_logo.png"/></a>
+            <a class="navbar-brand" href="#"><img alt="The Iron Yard" src="assets/images/wsu_logo.png"/></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="/home">Home</a></li>
                 <li routerLinkActive="active"><a routerLink="/student" >Students</a></li>
+                <li routerLinkActive="active"><a routerLink="/major" >Majors</a></li>
+                <li routerLinkActive="active"><a routerLink="/class" >Classes</a></li>
+                <li routerLinkActive="active"><a routerLink="/grade" >Grades</a></li>
+                <li routerLinkActive="active"><a routerLink="/instructor" >Instructor</a></li>
+                <li routerLinkActive="active"><a routerLink="/assignment" >Assignment</a></li>
+                <li routerLinkActive="active"><a routerLink="/majorclass" >Major Class</a></li>
+                <li routerLinkActive="active"><a routerLink="/studentclass" >Student Class</a></li>                
             </ul>
         </div><!--/.nav-collapse -->
     </div>
